# Riri

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
script/: Cargo.toml
script/src/: main.rs
src/: lyrics.rs  main.rs  models.rs  riri.rs
src/models/: apple_music.rs  lrc.rs  lyric_json.rs  lyric_xml.rs  synced_lyric_xml.rs  user_storefront.rs
