[package]
name = "Riri"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
apple-music = "0.11.5"
chrono = "0.4.38"
dirs = "5.0.1"
fancy-regex = "0.14.0"
quick-xml = { version = "0.36.2", features = ["serde", "serialize"] }
regex = "1.11.1"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.34"
system_status_bar_macos = "0.1.3"
tokio = { version = "1.41.0", features = ["full"] }
urlencoding = "2.1.3"

[package.metadata.bundle]
name = "Riri"
identifier = "com.liulifox.riri"
icon = ["i_ll.jpeg"]
